compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__binary_snapshots@and.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: 0 & 0;
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        1,
                    ),
                },
                kind: Binary(
                    Binary {
                        id: ExpressionId {
                            def: ItemId {
                                package: PackageId(
                                    0,
                                ),
                                index: Idx(
                                    0,
                                ),
                            },
                            index: Idx(
                                1,
                            ),
                        },
                        lhs: Expression {
                            id: ExpressionId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                index: Idx(
                                    2,
                                ),
                            },
                            kind: Literal(
                                Literal {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    kind: Int(
                                        IntLiteral {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                index: Idx(
                                                    2,
                                                ),
                                            },
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                    location: <internal>:0:1,
                                },
                            ),
                            location: <internal>:0:1,
                        },
                        op: BinaryOperator {
                            kind: And,
                            location: <internal>:2:3,
                        },
                        rhs: Expression {
                            id: ExpressionId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                index: Idx(
                                    3,
                                ),
                            },
                            kind: Literal(
                                Literal {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            3,
                                        ),
                                    },
                                    kind: Int(
                                        IntLiteral {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                index: Idx(
                                                    3,
                                                ),
                                            },
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                    location: <internal>:4:5,
                                },
                            ),
                            location: <internal>:4:5,
                        },
                        location: <internal>:0:5,
                    },
                ),
                location: <internal>:0:5,
            },
        ),
        location: <internal>:0:5,
    },
]
