compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__boolean_snapshots@or.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: 0 || 0;
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Expression(
            Expression {
                id: ExpressionId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                location: <internal>:0:6,
                kind: Logical(
                    Logical {
                        id: ExpressionId {
                            def: ItemId(
                                0,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        lhs: Expression {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    2,
                                ),
                            },
                            location: <internal>:0:1,
                            kind: Literal(
                                Literal {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    location: <internal>:0:1,
                                    kind: Int(
                                        IntLiteral {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    2,
                                                ),
                                            },
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                        op: LogicalOperator {
                            kind: Or,
                            location: <internal>:2:4,
                        },
                        rhs: Expression {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    3,
                                ),
                            },
                            location: <internal>:5:6,
                            kind: Literal(
                                Literal {
                                    id: ExpressionId {
                                        def: ItemId(
                                            0,
                                        ),
                                        index: Idx(
                                            3,
                                        ),
                                    },
                                    location: <internal>:5:6,
                                    kind: Int(
                                        IntLiteral {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    3,
                                                ),
                                            },
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                        location: <internal>:0:6,
                    },
                ),
            },
        ),
        location: <internal>:0:6,
    },
]
