compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__call_snapshots@method_empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: let _ = 1.call();
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Variable(
            VariableDeclaration {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                name: Identifier {
                    name: "_",
                    location: <internal>:4:5,
                },
                declared_type: None,
                value: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:10:17,
                    kind: InstanceCall(
                        InstanceCall {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            callee: Expression {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        2,
                                    ),
                                },
                                location: <internal>:8:9,
                                kind: Literal(
                                    Literal {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                2,
                                            ),
                                        },
                                        location: <internal>:8:9,
                                        kind: Int(
                                            IntLiteral {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        2,
                                                    ),
                                                },
                                                value: 1,
                                                kind: I32,
                                            },
                                        ),
                                    },
                                ),
                            },
                            name: Callable {
                                name: Identifier {
                                    name: "call",
                                    location: <internal>:10:14,
                                },
                                type_arguments: [],
                                location: <internal>:10:15,
                            },
                            arguments: [],
                        },
                    ),
                },
            },
        ),
        location: <internal>:0:17,
    },
]
